# image_transport_wrapper

./: .gitignore
image_transport_wrapper/: CMakeLists.txt
src/adaptative_depth_codec/: CMakeLists.txt  package.xml
src/adaptative_depth_codec/include/adaptative_depth_codec/: adaptative_alg.hpp  adaptative_depth_codec.hpp
src/adaptative_depth_codec/src/: adaptative_depth_codec_client.cpp  adaptative_depth_codec_server.cpp
src/adaptative_depth_codec/src/utils/: adaptative_alg.cpp  adaptative_depth_codec.cpp  codec_configs.json  codec_configs_15.json  codec_configs_30.json
src/adaptative_h264_plugin/: CMakeLists.txt  package.xml
src/adaptative_h264_plugin/src/: coder_h264_plugin.cpp  decoder_h264_plugin.cpp
src/advanced_depth_codec/: CMakeLists.txt  package.xml
src/advanced_depth_codec/include/advanced_depth_codec/: advanced_depth_codec.hpp  depth_codec.hpp
src/advanced_depth_codec/msg/: RLEimg.msg
src/advanced_depth_codec/src/: advanced_depth_codec_client.cpp  advanced_depth_codec_server.cpp
src/advanced_depth_codec/src/utils/: advanced_depth_codec.cpp  borrar.py
src/bitrate_topic_comparator/: CMakeLists.txt  package.xml
src/bitrate_topic_comparator/src/: bitrate_topic_comparator.cpp
src/cam_video_example/: CMakeLists.txt  info.txt  package.xml
src/cam_video_example/src/: camera_depth_publisher.cpp  camera_publisher.cpp
src/coded_interfaces/: CMakeLists.txt  package.xml
src/coded_interfaces/msg/: Adaptative.msg  AdaptativeMsg.msg  Rleimg.msg
src/depth_codec/: CMakeLists.txt
src/depth_codec/src/: depth_codec_client.cpp  depth_codec_server.cpp
src/depth_codec/src/utils/: depth_codec.cpp  info.txt
src/image_transport_wrapper/src/: wrapper_publisher.cpp
src/image_transport_wrapper/src/image_transport_wrapper/: WrapperPublisher.cpp
src/topic_image_routing/: CMakeLists.txt  package.xml
src/topic_image_routing/src/: codec_video_routing.cpp  topic_image_routing.cpp
src/topic_image_routing/src/codec/: info.txt
