<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>adaptative_depth_codec</name>
  <version>0.0.0</version>
  <description>Descripción de tu paquete</description>
  <maintainer email="tu_email@example.com">Tu Nombre</maintainer>
  <license>Tu Licencia</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>  
  <depend>std_msgs</depend>
  <depend>coded_interfaces</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
